--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,7 @@
     "node-sass": "^4.5.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^4.1.1"
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
