--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "bootstrap": "^3.3.7",
     "extract-text-webpack-plugin": "^2.1.2",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.2",
@@ -25,12 +26,12 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.8.1",
     "path": "^0.12.7",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.9",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^1.14.1"
   },
