--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "extract-text-webpack-plugin": "^2.1.2",
     "jquery": "^3.1.1",
