--- a/ui/package.json
+++ b/ui/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf ./node_modules && rm -rf ./dist && npm install",
-    "build": "webpack --display-error-details",
+    "clean": "rm -rf ./node_modules && rm -rf ./dist && yarn install",
+    "build": "webpack",
     "dev": "webpack-dev-server",
+    "lint": "eslint --ignore-pattern **/bundle-*.js --ext .js, .jsx src/**",
     "webpack-debug": "webpack --display-error-details"
   },
   "dependencies": {
     "axios": "^0.16.1",
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-watch": "^3.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "jquery": "^3.1.1",
     "node-sass": "^4.5.2",
@@ -27,6 +33,11 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.8.1",
     "path": "^0.12.7",
