--- a/ui/package.json
+++ b/ui/package.json
@@ -24,7 +24,10 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "next"
+    "react-redux": "^5.0.5",
+    "react-router-dom": "next",
+    "redux": "^3.7.1",
+    "redux-immutable-state-invariant": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
